# stellar_burger_project

./: .gitignore  README.md  project.py  pyproject.toml  pytest.ini
stellar_burger_project/API/: api_manager.py  ingredients_api.py  order_api.py  user_api.py
stellar_burger_project/data/: user.py  user_credentials.py
stellar_burger_project/pages/: login_page.py  main_page.py  registration_page.py
stellar_burger_project/utils/: attach.py  custom_requester.py
tests/: conftest.py
tests/api_tests/: conftest.py  test_change_user_data.py  test_create_order.py  test_create_user.py  test_login_user.py  test_validation_of_user_create.py  test_validation_of_user_login.py
tests/web_tests/: conftest.py  test_constructor.py  test_login_user.py  test_registration_user.py
